# Trajectory_analyzer

./: README.md
launch/: TrajectoryViewer.launch.py
rviz/: trajectory_reader_view.rviz
trajectory_analyzer/: CMakeLists.txt  README.MD  package.xml  readme.md
trajectory_analyzer/src/: trajectory_reader.cpp  trajectory_writer.cpp
